--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "dbc986b1-56c8-4426-90b1-59dbc674cedc"
 authors = ["Hokseon Lou"]
 version = "1.0.0-DEV"
 
+[deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+
 [compat]
 julia = "1.6.7"
 
