--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,10 @@ ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 
 [compat]
-julia = "1.6.7"
+CairoMakie = "0.7, 0.8, 0.9, 0.10, 0.12"
+ColorSchemes = "3"
+Colors = "0.12"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
